<resources>
    <string name="app_name">TasksOfAffirmation</string>
    <string name="app_logo_content_description">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>

    <string name="err_invalid_credentials">Your email and/or password are incorrect.</string>
    <string name="err_login_failure">There was a problem logging in. Please check your internet connection and try again.</string>

    <string name="err_empty_email">Please enter an email.</string>
    <string name="err_empty_password">Please enter a password.</string>
    <string name="reschedule">reschedule</string>
    <string name="done">done</string>
    <string name="add_task">Add Task</string>

    <string name="err_empty_task_description">Please enter a description.</string>
    <string name="err_scheduled_date_in_past">Please select a date today or in the future.</string>
    <string name="task_input_placeholder">Clean my office space...</string>
    <string name="select_date_content_description">Select Date</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="view_previous_day_content_description">View Previous Day</string>
    <string name="view_next_day_content_description">View Next Day</string>
    <string name="incomplete_tasks_header">Incomplete Tasks</string>
    <string name="completed_tasks_header">Accomplishments</string>
    <string name="no_completed_tasks_label">Tasks you\'ve completed will show up here!</string>
    <string name="no_incomplete_tasks_label">You\'ve accomplished everything for today!</string>
    <string name="no_tasks_scheduled_label">You have nothing scheduled for this day. Make time for yourself.</string>
    <string name="undo">UNDO</string>
    <string name="task_rescheduled">Task Rescheduled</string>
    <string name="task_accomplished">Task \"%s\" Accomplished</string>
    <string name="that_is_okay">That\'s Okay</string>
    <string name="err_add_task_limit_reached">You already have a lot going on this day. Would you like to schedule this for another day?</string>
    <string name="change_date">Change Date</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="num_tasks_per_day_label">Number Of Tasks Per Day</string>
</resources>